fix(work-card): adjust dimensions and overflow properties for better layout consistency

--- a/components/sections/Work/index.scss
+++ b/components/sections/Work/index.scss
@@ -90,9 +90,9 @@
   }
 
   &__info {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: var(--foreground);
     text-align: center;
-    margin-top: 1rem;
+    margin: 0;
   }
 }
