--- a/components/ui/WorkCard/index.scss
+++ b/components/ui/WorkCard/index.scss
@@ -52,12 +52,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: auto;
+    height: 60vh;
+    min-height: 60vh;
+    max-height: 60vh;
+    overflow: hidden;
 
     &__image {
-      min-width: 60vh;
+      min-width: 60vw;
       max-width: 90vw;
-      max-height: 30vh;
+      height: 30vh;
       margin-bottom: 1rem;
       align-items: flex-start;
 
@@ -69,12 +72,16 @@
     &__text {
       flex: 1 1 40%;
       max-width: 90vw;
+      height: 22vh;
+      min-height: 22vh;
+      max-height: 22vh;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
       padding-top: 1rem;
       color: var(--foreground);
+      overflow: hidden;
 
       h2 {
         font-size: 1.3rem;
